--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -3,21 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Document</title>
 </head>
 <body class="body-tienda">
     <header class="header header-tienda">
         <button class="btn btn-outline menu-boton" type="button" data-bs-toggle="offcanvas"
-            data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"><img src="..//img/menu-burger.png" alt="">
+            data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"><img src="..//img/menu-burger.png" alt="Menu">
         </button>
 
         <div class="offcanvas offcanvas-start menu-color" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions"
             aria-labelledby="offcanvasWithBothOptionsLabel">
             <div class="offcanvas-header menu-color">
-                <h5 class="offcanvas-title nav-color" id="offcanvasWithBothOptionsLabel">DataDuki</h5>
+                <h1 class="offcanvas-title nav-color" id="offcanvasWithBothOptionsLabel">DataDuki</h1>
                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body menu-color">
@@ -37,30 +37,30 @@
     </header>
     <main class="main-tienda">
         
-            <h1 class="tienda">TIENDA</h1>
+            <h2 class="tienda">TIENDA</h2>
         
         <section class="section-tienda">
             <div class="tarjeta-producto producto-1">
                 <!--IMAGEN-->
-                <img src="../img/DEFDM frente.png" alt="">
+                <img src="../img/defdm-frente.png" alt="Remera">
                 <h2>Remera Desde El Din Del Mundo Negra</h2>
                 <a href="https://www.duki.com.ar/MLA-1811048120-remera-desde-el-fin-del-mundo-negra-_JM#position%3D1%26search_layout%3Dgrid%26type%3Ditem%26tracking_id%3D35e87291-4084-475b-9dc6-07b1e3ee764b" target="_blank">Comprar</a>
             </div>
             <div class="tarjeta-producto producto-2">
                 <!--IMAGEN-->
-                <img src="../img/All Tree frente.png" alt="">
+                <img src="../img/all-tree-frente.png" alt="Remera">
                 <h2>Remera All Tree Negra</h2>
                 <a href="https://www.duki.com.ar/MLA-1433589145-remera-all-tree-negra-_JM#position%3D2%26search_layout%3Dgrid%26type%3Ditem%26tracking_id%3Da0dfd77e-ab82-4578-ae1a-e01ffd4a44ff" target="_blank">Comprar</a>
             </div>
             <div class="tarjeta-producto producto-3">
                 <!--IMAGEN-->
-                <img src="../img/4d frente.png" alt="">
+                <img src="../img/4d-frente.png" alt="Remera">
                 <h2>Remera 4d Negra</h2>
                 <a href="https://www.duki.com.ar/MLA-1433630335-remera-4d-negra-_JM#position%3D3%26search_layout%3Dgrid%26type%3Ditem%26tracking_id%3D9a90da8f-2e1c-44ce-ad0c-fd1f06451747" target="_blank">Comprar</a>
             </div>
             <div class="tarjeta-producto producto-4">
                 <!--IMAGEN-->
-                <img src="../img/buzo 4d frente.jpeg" alt="">
+                <img src="../img/buzo-4d-frente.jpeg" alt="Buzo">
                 <h2>Buzo 4d Negro</h2>
                 <a href="https://www.duki.com.ar/MLA-1433613311-buzo-4d-negro-_JM#position%3D1%26search_layout%3Dgrid%26type%3Ditem%26tracking_id%3D5ef4e1b1-6743-4d57-a382-6b9594eb4e49" target="_blank">Comprar</a>
             </div>
@@ -70,12 +70,12 @@
     <footer>
         <!--REDES-->
         <ul>
-            <li><a href="https://x.com/DukiSSJ?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_blank"><img src="../img/twitter-alt-square.png" alt=""></a></li>
-            <li><a href="https://www.tiktok.com/@duki?lang=es" target="_blank"><img src="../img/tik-tok.png" alt=""></a></li>
-            <li><a href="https://open.spotify.com/intl-es/artist/1bAftSH8umNcGZ0uyV7LMg" target="_blank"><img src="../img/spotify.png" alt=""></a></li>
-            <li><a href="https://www.facebook.com/DUKISSJ/" target="_blank"><img src="../img/facebook.png" alt=""></a></li>
-            <li><a href="https://www.youtube.com/channel/UCJUYcEdvnYFGajHBW0Nao3w" target="_blank"><img src="../img/youtube.png" alt=""></a></li>
-            <li><a href="https://www.instagram.com/duki/" target="_blank"><img src="../img/instagram.png" alt=""></a></li>
+            <li><a href="https://x.com/DukiSSJ?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_blank"><img src="../img/twitter-alt-square.png" alt="Twiter"></a></li>
+            <li><a href="https://www.tiktok.com/@duki?lang=es" target="_blank"><img src="../img/tik-tok.png" alt="Tiktok"></a></li>
+            <li><a href="https://open.spotify.com/intl-es/artist/1bAftSH8umNcGZ0uyV7LMg" target="_blank"><img src="../img/spotify.png" alt="Spotify"></a></li>
+            <li><a href="https://www.facebook.com/DUKISSJ/" target="_blank"><img src="../img/facebook.png" alt="Facebook"></a></li>
+            <li><a href="https://www.youtube.com/channel/UCJUYcEdvnYFGajHBW0Nao3w" target="_blank"><img src="../img/youtube.png" alt="Youtube"></a></li>
+            <li><a href="https://www.instagram.com/duki/" target="_blank"><img src="../img/instagram.png" alt="Instagram"></a></li>
         </ul>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
