--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/style.css">
     <title>DataDuki</title>
 </head>
 
 <body class="body-index">
     <header class="header">
         <button class="btn btn-outline menu-boton" type="button" data-bs-toggle="offcanvas"
-            data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"><img src=".//img/menu-burger.png" alt="">
+            data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"><img src=".//img/menu-burger.png" alt="Menu">
         </button>
 
         <div class="offcanvas offcanvas-start menu-color" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions"
             aria-labelledby="offcanvasWithBothOptionsLabel">
             <div class="offcanvas-header menu-color">
-                <h5 class="offcanvas-title nav-color" id="offcanvasWithBothOptionsLabel">DataDuki</h5>
+                <h1 class="offcanvas-title nav-color" id="offcanvasWithBothOptionsLabel">DataDuki</h1>
                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body menu-color">
@@ -38,23 +38,17 @@
         </div>
     </header>
     <main class="main-index">
-            <h1 class="h1-index">DUKI</h1>
+            <h2 class="h1-index">DUKI</h2>
     </main>
     <footer>
         <!--REDES-->
         <ul>
-            <li><a href="https://x.com/DukiSSJ?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"
-                    target="_blank"><img src="./img/twitter-alt-square.png" alt=""></a></li>
-            <li><a href="https://www.tiktok.com/@duki?lang=es" target="_blank"><img src="./img/tik-tok.png" alt=""></a>
-            </li>
-            <li><a href="https://open.spotify.com/intl-es/artist/1bAftSH8umNcGZ0uyV7LMg" target="_blank"><img
-                        src="./img/spotify.png" alt=""></a></li>
-            <li><a href="https://www.facebook.com/DUKISSJ/" target="_blank"><img src="./img/facebook.png" alt=""></a>
-            </li>
-            <li><a href="https://www.youtube.com/channel/UCJUYcEdvnYFGajHBW0Nao3w" target="_blank"><img
-                        src="./img/youtube.png" alt=""></a></li>
-            <li><a href="https://www.instagram.com/duki/" target="_blank"><img src="./img/instagram.png" alt=""></a>
-            </li>
+            <li><a href="https://x.com/DukiSSJ?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_blank"><img src="./img/twitter-alt-square.png" alt="Twiter"></a></li>
+            <li><a href="https://www.tiktok.com/@duki?lang=es" target="_blank"><img src="./img/tik-tok.png" alt="Tiktok"></a></li>
+            <li><a href="https://open.spotify.com/intl-es/artist/1bAftSH8umNcGZ0uyV7LMg" target="_blank"><img src="./img/spotify.png" alt="Spotify"></a></li>
+            <li><a href="https://www.facebook.com/DUKISSJ/" target="_blank"><img src="./img/facebook.png" alt="Facebook"></a></li>
+            <li><a href="https://www.youtube.com/channel/UCJUYcEdvnYFGajHBW0Nao3w" target="_blank"><img src="./img/youtube.png" alt="Youtube"></a></li>
+            <li><a href="https://www.instagram.com/duki/" target="_blank"><img src="./img/instagram.png" alt="Instagram"></a></li>
         </ul>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
