--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Document</title>
 </head>
 
@@ -14,13 +14,13 @@
     <header class="header header-tienda">
         <button class="btn btn-outline menu-boton" type="button" data-bs-toggle="offcanvas"
             data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"><img
-                src="..//img/menu.png" alt="">
+                src="..//img/menu.png" alt="Menu">
         </button>
 
         <div class="offcanvas offcanvas-start menu-color" data-bs-scroll="true" tabindex="-1"
             id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">
             <div class="offcanvas-header menu-color">
-                <h5 class="offcanvas-title nav-color" id="offcanvasWithBothOptionsLabel">DataDuki</h5>
+                <h1 class="offcanvas-title nav-color" id="offcanvasWithBothOptionsLabel">DataDuki</h1>
                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body menu-color">
@@ -41,7 +41,7 @@
     <main class="main-contacto">
         <section>
 
-            <h1>CONTACTO</h1>
+            <h2>CONTACTO</h2>
 
             <p>Nos interesa conocerte y saber tú opinion al respecto del contenido que
                 deseas ver o cambios que harias.<br>Recorda que tù opinion es de gran interes!</p>
@@ -72,18 +72,12 @@
     <footer>
         <!--REDES-->
         <ul>
-            <li><a href="https://x.com/DukiSSJ?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"
-                    target="_blank"><img src="../img/twitter-alt-square-rojo.png" alt=""></a></li>
-            <li><a href="https://www.tiktok.com/@duki?lang=es" target="_blank"><img src="../img/tik-tok-rojo.png" alt=""></a>
-            </li>
-            <li><a href="https://open.spotify.com/intl-es/artist/1bAftSH8umNcGZ0uyV7LMg" target="_blank"><img
-                        src="../img/spotify-rojo.png" alt=""></a></li>
-            <li><a href="https://www.facebook.com/DUKISSJ/" target="_blank"><img src="../img/facebook-rojo.png" alt=""></a>
-            </li>
-            <li><a href="https://www.youtube.com/channel/UCJUYcEdvnYFGajHBW0Nao3w" target="_blank"><img
-                        src="../img/youtube-rojo.png" alt=""></a></li>
-            <li><a href="https://www.instagram.com/duki/" target="_blank"><img src="../img/instagram-rojo.png" alt=""></a>
-            </li>
+            <li><a href="https://x.com/DukiSSJ?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_blank"><img src="../img/twitter-alt-square-rojo.png" alt="Twiter"></a></li>
+            <li><a href="https://www.tiktok.com/@duki?lang=es" target="_blank"><img src="../img/tik-tok-rojo.png" alt="Tiktok"></a></li>
+            <li><a href="https://open.spotify.com/intl-es/artist/1bAftSH8umNcGZ0uyV7LMg" target="_blank"><img src="../img/spotify-rojo.png" alt="Spotify"></a></li>
+            <li><a href="https://www.facebook.com/DUKISSJ/" target="_blank"><img src="../img/facebook-rojo.png" alt="Facebook"></a></li>
+            <li><a href="https://www.youtube.com/channel/UCJUYcEdvnYFGajHBW0Nao3w" target="_blank"><img src="../img/youtube-rojo.png" alt="Youtube"></a></li>
+            <li><a href="https://www.instagram.com/duki/" target="_blank"><img src="../img/instagram-rojo.png" alt="Instagram"></a></li>
         </ul>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
